2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Check for mode_t too since we need it for umask().
	You can never know.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (AM_INIT_AUTOMAKE): Remove 'dist-bzip2' option
	since we don't distribute bzipped tarballs right now.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Get rid of AC_CANONICAL_{BUILD,HOST,TARGET}.
	These don't seem to be necessary anymore.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/cxx.m4: Use quadrigraphs to output characters like [ ].
	* macros/pcre.m4: Add error checking at the autoconf level.

2002-11-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc: Set the default response.
	* src/prefdialog.cc: ditto.

2002-11-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (stock_icon_info): It's Gtk::ICON_SIZE_MENU, not
	Gtk::ICON_SIZE_SMALL_TOOLBAR.  This glitch fortunately didn't have
	any real consequences since the icon size was wildcarded anyway.

regexxer 0.4:

2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* NEWS: Update.

2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/configdata.{cc,h}: Generalize the enumeration handling in
	two new functions, enum_to_string() and enum_from_string().

2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc: Refine the design a bit, and mention Ross
	Burton (Debian packager) as major contributor.

2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.cc (create_menubar): Don't use "<control>f" as
	accelerator for "Move forward" because it's already occupied by
	the tree view search facility.

2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h}: Move the GUI stuff from the ctor into an
	auxilary method create_main_vbox().  Manually call accelerate() on
	the menu bar because otherwise the menu accelerators wouldn't be