@@ -31,7 +31,7 @@ AC_PROG_CXX()
 
 AC_CHECK_HEADERS([sys/types.h sys/stat.h])
 AC_CHECK_FUNCS([umask])
-AC_TYPE_MODE_T()
+AC_CHECK_TYPES([mode_t])
 
 PKG_CHECK_MODULES([GTKMM], [glib-2.0 >= 2.0.7 gtk+-2.0 >= 2.0.6 sigc++-1.2 >= 1.2.1 gtkmm-2.0 >= 2.0.0])
 AC_SUBST([GTKMM_CFLAGS])
